# yast-testsuite

./: .cvsignore  .gitignore  .travis.yml  MAINTAINER  README  README.md  RPMNAME  configure.in.in  yast2-testsuite.spec.in
.github/workflows/: ci.yml
devel/: Makefile.am
devel/doc/: Makefile.am
devel/src/: Makefile.am  bench.ycp  debug.ycp  devel.ycp
devel/testsuite/tests/: bench.out  bench.ycp  debug.out  debug.ycp
doc/: Makefile.am  Todo.txt  abuild.html  create.html  details.html  example.html  index.html  prepare.html  skel.html  testing.html  todo.html
package/: yast2-testsuite.changes  yast2-testsuite.spec
skel/: .cvsignore  Makefile.am  Makefile.testsuite  Makefile.testsuite.in  Makefile_am  dummy.scr  log.conf  runtest.sh  testsuite.exp  unix.exp
src/: Makefile.am  Pkg.ycp  Testsuite.ycp  testsuite.ycp
src/include/: testsuite.rb
src/modules/: Testsuite.rb
testsuite/: .cvsignore  Makefile.am  dump_file  test.out  test.rb  test.ycp
