#
# Makefile.am for testsuite/skel
# $Id$
#

datadir = @ydatadir@/testsuite
skeldir = @ydatadir@/testsuite/skel

data_DATA =			\
	Makefile.testsuite

skel_DATA =			\
	default.exp		\
	unix.exp		\
	unknown.exp		\
	Makefile_am		\
	_cvsignore		\
	testsuite.exp		\
	runtest.sh

EXTRA_DIST = $(data_DATA) $(skel_DATA)
