#
# Makefile.am for testsuite/skel
# $Id$
#

olddatadir = /usr/lib/YaST2/testsuite
datadir = @ydatadir@/testsuite
skeldir = @ydatadir@/testsuite/skel

olddata_DATA =			\
	Makefile.testsuite

data_DATA =			\
	Makefile.testsuite

skel_DATA =			\
	default.exp		\
	unix.exp		\
	unknown.exp		\
	Makefile_am		\
	_cvsignore		\
	testsuite.exp		\
	runtest.sh

EXTRA_DIST = $(data_DATA) $(skel_DATA) $(olddata_DATA)
