# Makefile.am for testsuite/skel
# $Id$

datadir = @ydatadir@/testsuite
skeldir = @ydatadir@/testsuite/skel

data_DATA =			\
	Makefile.testsuite	\
	log.conf

skel_DATA =			\
	default.exp		\
	unix.exp		\
	unknown.exp		\
	Makefile_am		\
	testsuite.exp		\
	runtest.sh

EXTRA_DIST = Makefile.testsuite.in log.conf $(skel_DATA)
